--- a/St-Form/index.html
+++ b/St-Form/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <form method="post" action="<?php echo $_SERVER['PHP_SELF']; ?>">
+
+ <form method="post" action="<?php echo $_SERVER['PHP_SELF']?>">
         <h1>Student Registration Form</h1>
         <section>
             <fieldset>
