--- a/St-Form/index.html
+++ b/St-Form/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
- <form method="post" action="<?php echo $_SERVER['PHP_SELF']?>">
+<form method="post" action="<?php echo $_SERVER['PHP_SELF'];?>">
         <h1>Student Registration Form</h1>
         <section>
             <fieldset>
